--- a/index.html
+++ b/index.html
@@ -23,26 +23,33 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小朋友，萍</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
-                      <span class="say">你说我啰嗦，</span><br>             
-                          <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
-                      <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
+                      <span class="say"> 相亲中相遇，有缘不容易，也许天注定，错过多可惜，明知相思苦，寸心难语尽。</span><br>
+                      <span class="say"> 从见你的第一眼开始，我就发现终于找到我的另一半了。</span><br>
+                      <span class="say"> 而且这几天的聊天，有说有笑的，不知道你笑了没有，反正我笑了</span><br>
+                      <span class="say"> 已经好久没有这种来自内心深处的期待与开心了。</span><br>
+                      <span class="say"> 虽然嘴上老是喜欢占你便宜、欺负你，但实际中又怎么舍得去欺负你呢</span><br>
+					  <span class="say">emmm 每次都你说介绍相亲对象给你，都有点慌。哈哈哈</span><br>					  
+                      <span class="say"> 哎呀呀，不说这么多了。</span><br>
+<br>					  
+					  <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>                      
+                      <span class="say">所以我想以男朋友的身份一直陪伴你，分享你的快乐，倾听你的烦恼，负责你的一切的一切。</span><br>
+					  <span class="say">希望能给我一个照顾你一辈子的机会</span><br>
                       <span class="say">希望可以执子之手，与子偕老</span><br>
                       <span class="say">如果上天让我许三个愿望，</span><br>
                               <span class="say">第一个是今生今世和你在一起， </span><br>
                            <span class="say"> 第二个是再生再世和你在一起，</span><br>
                            <span class="say">第三个是永生永世和你不分离 </span><br>
-                      <span class="say"><span class="space"></span> -- 爱你的老公</span> </font>
+                      <span class="say"><span class="space"></span> -- 小陈</span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我喜欢你</font>
+                    <span class="STYLE1"></span><font color="#33CC00">喜欢你</font>
 <span class="STYLE1">已经是……</span>
                   <div id="clock"></div>
               </div>
