--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小朋友，萍</span><br>
+                    <div id="code"> <font color="#90c6fa"> <span class="say">亲爱的小朋友，萍</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
                       <span class="say"> 相亲中相遇，有缘不容易，也许天注定，错过多可惜，明知相思苦，寸心难语尽。</span><br>
